[package]
name = "radius-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
config = "0.13.4"
env_logger = "0.10.1"
hex = "0.4.3"
hex-literal = "0.4.1"
log = "0.4.20"
radius = "0.4.0"
serde = "1.0.195"
serde_derive = "1.0.195"
sha2 = "0.10.8"
tokio = "1.35.1"
